@@ -1,3 +1,13 @@
+2001-05-25  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* parse.pl.in (xst_parse_shell_escape): Some special chars
+	are escaped when surrounded by quotes, so let's apply quotes
+	if they appear, and not escape them with '\', as they may
+	be latter surrounded by quotes and make the backslash appear.
+
+	* parse.pl.in: More comment documentation.
+	* replace.pl.in: same.
+
 2001-05-25  Tambet Ingo  <tambet@ximian.com>
 
 	* boot.pl.in (xst_boot_conf_set_images): Reimplement.
